# toolkit

./: .drone.yml  Cargo.toml  README.md
src/: fs.rs  lib.rs  number.rs  option.rs  path.rs  text.rs
tests/: test_fs.rs  test_number.rs  test_text.rs
