[package]
name = "toolkit"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust toolkit"
repository = "https://github.com/fewensa/toolkit"
keywords = ["toolkit"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
